--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "debug": "^2.6.6",
-    "dffptch": "^1.0.4",
     "dynamic.io": "^0.0.3",
+    "json8-merge-patch": "^1.0.0",
     "socket.io-client": "^1.7.3",
     "tiny-emitter": "^2.0.0"
   },
