--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "debug": "^2.6.6",
     "dynamic.io": "^0.0.3",
-    "json8-merge-patch": "^1.0.0",
+    "jiff": "^0.7.3",
     "socket.io-client": "^1.7.3",
     "tiny-emitter": "^2.0.0"
   },
